grader/src/main/java/reports/LecturerGrader_report.txt
Compilation Failed

Main.java:9: error: class LecturerGrader is public, should be declared in a file named LecturerGrader.java
public class LecturerGrader {
       ^
1 error
